--- a/kotiki/build.gradle
+++ b/kotiki/build.gradle
@@ -1,9 +1,12 @@
 plugins {
+    id 'org.springframework.boot' version '2.6.6'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
@@ -14,8 +17,20 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
     implementation 'org.hibernate:hibernate-core:5.6.5.Final'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.3.1'
+
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.22'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
 
 test {
-    useJUnit()
+    useJUnitPlatform()
 }
